WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21375
REGRESSION (
r37297
): fast/js/deep-recursion-test takes too long and times out
https://bugs.webkit.org/show_bug.cgi?id=21375
Summary
REGRESSION (r37297): fast/js/deep-recursion-test takes too long and times out
Cameron Zwarich (cpst)
Reported
2008-10-04 17:45:52 PDT
After
r37297
, access to the dynamic global object takes quadratic time, causing the recursion test to take a lot longer to run. The possible solutions are ensuring that no performance-sensitive callers access the dynamic global object, putting the dynamic global object in global data, or some combination of the two.
Attachments
speed up dynamicGlobalObject to avoid O(N^2) behavior
(7.79 KB, patch)
2008-10-05 19:38 PDT
,
Maciej Stachowiak
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Maciej Stachowiak
Comment 1
2008-10-05 19:38:49 PDT
Created
attachment 24108
[details]
speed up dynamicGlobalObject to avoid O(N^2) behavior
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug