JavaScriptCore/kjs/ExecState.h
@@ -43,10 +43,7 @@ namespace JSC  {
         Register* registers() { return this; }
 
         // Global object in which execution began.
-        JSGlobalObject* dynamicGlobalObject()
-        {
-            return Machine::scopeChain(Machine::firstCallFrame(this))->globalObject();
-        }
+        JSGlobalObject* dynamicGlobalObject();
 
         // Global object in which the currently executing code was defined.
         // Differs from dynamicGlobalObject() during function calls across web browser frames.
